--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://xgumshoe.github.io/ReactJS-Pohto-Editor",
+  "homepage": "https://xgumshoe.github.io/ReactJS-Photo-Editor",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
